--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                    color:#0000ff;
                }
                 </style>
-                <section id="Publications">
+                <section id="service">
 
 
                     <h3 class="headline scroll-animated">Publications</h3>
