--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h3 class="headline scroll-animated">Contact Me</h3>
 
 
-            <p> Emali: cindyzhang.yono531@gmail.com</p>
+            <p> Emali: cindyzhang.yono531@gmail.com  /  XINGDI.ZHANG@KAUST.EDU.SA</p>
 
 
         </section>
