--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 
         <div class="Publications">
               <li>
-                   <p>  VCIP2018: This work studies the efficient Synthesis scheme of HDR pictures, we propose a method to quickly produce synthetic weights according to the intermediate products of JPEG image compression.<br>
-                       Publication of research paper <a href="https://www.researchgate.net/publication/332676147_Multi-exposure_Fusion_With_JPEG_Compression_Guidance">(Multi-exposure Fusion with JPEG Compression Guidance)</a> as first author was accepted by IEEE VCIP2018. </p>
+                   VCIP2018: This work studies the efficient Synthesis scheme of HDR pictures, we propose a method to quickly produce synthetic weights according to the intermediate products of JPEG image compression.<br>
+                    Research paper <a href="https://www.researchgate.net/publication/332676147_Multi-exposure_Fusion_With_JPEG_Compression_Guidance">(Multi-exposure Fusion with JPEG Compression Guidance)</a> was accepted by IEEE VCIP2018.
               </li>
                <li>
-                   <p>  CVPR2019:We focus on a deep learning solution for deep detection complement in on-board scenarios, we use virtual engine (UE4) to generate synthetic training data, train our model with our own multichannel multi-scale fusion depth module.<br>
-                       Research paper <a href="https://arxiv.org/abs/1812.00488v1">（DeepLiDAR: Deep Surface Normal Guided Depth Prediction for Outdoor Scene from Sparse LiDAR Data and Single Color Image）</a> was accepted by CVPR2019.</p>
+                   CVPR2019:We focus on a deep learning solution for deep detection complement in on-board scenarios, we use virtual engine (UE4) to generate synthetic training data, train our model with our own multichannel multi-scale fusion depth module.<br>
+                       Research paper <a href="https://arxiv.org/abs/1812.00488v1">（DeepLiDAR: Deep Surface Normal Guided Depth Prediction for Outdoor Scene from Sparse LiDAR Data and Single Color Image）</a> was accepted by CVPR2019.
               </li>
               <li>
-                   <p>  IEEE VIS2021: This paper presents a novel framework for the exploration and use of an interactively-chosen set of physically realizable observers, to explore the volecity fields(vector fileds), to visualize objective vortex structures.<br>
-                       Research paper <a href="http://vccvisualization.org/research/killinginteraction/">（Interactive Exploration of Physically-Observable Objective Vortices in Unsteady 2D Flow ）</a> was accepted by IEEE VIS2021. </p>
+                   IEEE VIS2021: This paper presents a novel framework for the exploration and use of an interactively-chosen set of physically realizable observers, to explore the volecity fields(vector fileds), to visualize objective vortex structures.<br>
+                       Research paper <a href="http://vccvisualization.org/research/killinginteraction/">（Interactive Exploration of Physically-Observable Objective Vortices in Unsteady 2D Flow ）</a> was accepted by IEEE VIS2021.
               </li>
 
         </div>
