--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     </head>
     
          <div class="Intro">
-              <h1 Xingdi Zhang.</h1>
-              <h2>About Me</h2>
+              <h2>Xingdi Zhang.</h2>
 
                         <p I graduated from UESTC (CHINA), where I majored in CS. Now I am a PHD student at KAUST under the supervision of professor Markus Hadwiger</p>
                         <p >My research areas include:  parallel computing, computer vision, computer graphics, visualization</p>
