--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <div class='CV'>
                         <h3><i> Education</i> </h3>
                         
-                        <p> <b>B.E.</b> in Computer Science(Yingcai Honor School)          Time: September 2016 – June 2020<br>
+                        <p> <b>B.E.</b> in Computer Science(Yingcai Honor School)          &emsp; Time: September 2016 – June 2020<br>
                          University of Electronic Science and Technology of China, Chengdu, China <br></p>
-                         <p> Ms/Ph.D in Computer Science                                   Time: September 2020 – until now<br>
+                         <p> <b>Ms/Ph.D</b> in Computer Science                                   &emsp;  Time: September 2020 – until now<br>
 			 King Abdullah University of Science & Technology,Jeddah, Saudia arabia.<br></p>
 			    
 			 <p> Currently I am a PHD student at KAUST, working in fluid visualization and graphics, under the supervision of professor Markus Hadwiger.<br>
