--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="Publications">
 		  <h3>Publications</h3><hr />
                <li>
-		  <b>Interactive Exploration of Physically-Observable Objective Vortices in Unsteady 2D Flow </b><br>
+		  <b>Interactive Exploration of Physically-Observable Objective Vortices in Unsteady 2D Flow </b><font color="red">(Honorable Mention Award!) </font><br>
 		   &emsp;  <b>Xingdi Zhang</b> , Markus Hadwiger, Thomas Theußl and Peter Rautek<br>
                    &emsp; IEEE Transactions on Visualization and Computer Graphics(TVCG), Vol.28, No.2 (Proceedings IEEE VIS 2021)<br>
 		   &emsp;<a href="http://vccvisualization.org/research/killinginteraction/">[Paper]</a> &emsp;  [Code]&emsp; 
