--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		  <h3>Publications</h3><hr />
 		<li>
 		  <b>MS THESIS: An Interactive Exploration System for Physically-ObservableObjective Vortices in Unsteady 2D Flow </b> (incoming soon)<br>
-                   &emsp; I am glad that the thesis was reviewed by the professional commitee: my supervisor Markus, prof Helmut Pottmann and Ivan Viola.<br>
+                   &emsp; I am glad that the thesis was reviewed by a very professional commitee: my supervisor Markus, prof Helmut Pottmann and Ivan Viola.<br>
 	
               </li>
                <li>
