--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="Publications">
 		  <h3>Publications</h3><hr />
 		<li>
-		  <b>MS THESIS: An Interactive Exploration System for Physically-ObservableObjective Vortices in Unsteady 2D Flow </b> (incoming soon)<br>
+		  <b>MS THESIS: An Interactive Exploration System for Physically-ObservableObjective Vortices in Unsteady 2D Flow </b> 
+			<a href="assets//InteractiveVortexVisualizationcc.pdf.pdf" target="_blank">Preview PDF<a><br>
                    &emsp; I am glad that the thesis was reviewed by a very professional commitee: my supervisor Markus, prof Helmut Pottmann and Ivan Viola.<br>
 	
               </li>
@@ -55,7 +56,12 @@
 		   &emsp;<a href="http://vccvisualization.org/research/killinginteraction/">[Paper]</a> &emsp;  [Code]&emsp; 
 		   <a href="https://vimeo.com/584574144"> [video]</a> 
               </li>
-		
+				
+		 <li> 
+		 <b>BS THESIS:知识驱动的聊天机器人系统设计与实现</b> <br>
+		&emsp;  <a href="assets//FinalBachelorThesis.pdf" target="_blank">[Paper]<a>
+              </li>
+				
                <li>
 		     <b>DeepLiDAR: Deep Surface Normal Guided Depth Prediction for Outdoor Scene from Sparse LiDAR Data and Single Color Image </b><br>
 		    &emsp;  Jiaxiong Qiu*, Zhaopeng Cui*, Yinda Zhang*, <b>Xingdi Zhang</b>, Shuaicheng Liu, Bing Zeng, Marc Pollefeys<br>
