--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		  <h3>Publications</h3><hr />
 		<li>
 		  <b>MS THESIS: An Interactive Exploration System for Physically-ObservableObjective Vortices in Unsteady 2D Flow </b> 
-			<a href="assets//InteractiveVortexVisualizationcc.pdf.pdf" target="_blank">Preview PDF<a><br>
+			<a href="assets//InteractiveVortexVisualizationcc.pdf" target="_blank">Preview PDF<a><br>
                    &emsp; I am glad that the thesis was reviewed by a very professional commitee: my supervisor Markus, prof Helmut Pottmann and Ivan Viola.<br>
 	
               </li>
