--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
              
               <li> 
 		<b>Multi-exposure Fusion with JPEG Compression Guidance</b> <br>
-                &emsp;   <b>Xingdi Zhang</b>,Shuaicheng LiuShuaicheng,LiuShuyuan ZhuBing, ZengBing Zeng<br>
+                &emsp;   <b>Xingdi Zhang</b>,Shuaicheng Liu,Shuyuan Zhu,Bing, Zeng<br>
                 &emsp;  IEEE Visual Communications and Image Processing (VCIP), 2018<br>
 		&emsp; <a href="https://ieeexplore.ieee.org/document/8698717"> [Paper]</a>  &emsp; <a href="https://github.com/Cindy-xdZhang/Jpeg_HDRI" >[Code]</a> 
               </li>
