--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
          <div class="Intro">
               <h1>Xingdi Zhang (张星迪)</h1>
 					<img src="assets//img//5754892b17b809bd40533923c45f43a.jpg" width="250px" height="356px">
+		 <p> 我将思念燃烧成星光，化作流星划过你的眼眸，隔空相拥。让我们一起，坠落星空。 </p> 
+		 
                     <div class='CV'>
                         <h3><i> Education</i> </h3>
                         
@@ -102,6 +104,7 @@
 	  </div>	
 	<div class="Service">
 		 <h3> Servise</h3>
+		 <li>Volunteer: Vcc Open week (VR experience for flow visualization) -Nov29,2021 </li>  
 	  </div>	
 	<div class="Intern">
 		 <h3> Intern</h3>
