--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <div class="Publications">
 		  <h3>Publications</h3><hr />
 		<li>
-		  <b>MS THESIS: An Interactive Exploration System for Physically-ObservableObjective Vortices in Unsteady 2D Flow </b> 
+		  <b>MS THESIS: An Interactive Exploration System for Physically-ObservableObjective Vortices in Unsteady 2D Flow </b> <br>
+		  <a href="http://hdl.handle.net/10754/673768">[PDF]</a><br>
 		  <br>
                    &emsp; I am glad that the thesis was reviewed by a very professional commitee: my supervisor Markus, prof Helmut Pottmann and Ivan Viola.<br>
 	
@@ -63,6 +64,7 @@
 		 <li> 
 		 <b>BS THESIS:知识驱动的聊天机器人系统设计与实现 (A knowledge-driven dialogue system design and implementation)</b> <br>
 		  &emsp;  This is a deep learning (transformer) based NLP dialogue system. 
+		  &emsp;  <a href="assets//FinalBachelorThesis.pdf" target="_blank">[PDF]</a>
               </li>
 				
                <li>
