--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
         <!-- FOOTER -->
         <section id="footer">
 		<h5>MiscNotes</h5>
-		<h6>如果你有看到：和你分手已经一年半了，彻底断掉一切关系也半年了。我认识了新的朋友，走了很多国家和地方，我可以靠着朋友的鼓励和现实的丰富忘记了你的一切。<br>
+		<h6>如果你有看到：和你分手已经一年半了，彻底断掉一切关系也半年了。我认识了新的朋友，走了很多国家和地方，我可以靠着朋友的鼓励和现实的丰富忘记了你的一切。原谅我大部分时间只能努力去总结你的缺点，只有这样才能救我自己。<br>
 		艰难的是，当我想家，想父母的时候，我错误的还是把你放在里面。有那么几个月我删掉了一切和你有关的东西，可是最近还是由于思念，也想记起来自己那几年是怎么度过的，恢复了回收站里即将永久丢失的相册。
 		按你的教育，和新认识的xjj解释坦白了，我暂时没法改变，她也无法接受，就这样吧。<br>
 		No matter when, 你如果想知道我还爱你吗？你不用问我，the answer is yes. <br>
-		只是以前习惯了和你在一起，只会依赖你，纠缠你，现在我更明白就算挽回你也不过是送你一场看不到未来的异地恋。所以就让老天决定一切吧，在每一个我的生日，也祝你生日快乐！<br>
+		只是以前习惯了和你在一起，只会依赖你，纠缠你，现在我更明白就算挽回你也不过是送你一场看不到未来的异地恋。所以就让老天决定一切吧，如果有一天我真的全忘了，我会在这里告诉你的。<br>
+		在每一个我的生日，也祝你生日快乐！<br>
 		2022.JULY 7th</h6>
 		
 			
