--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
 
           <!-- Publication Item -->
           <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/vis25.png" alt="Teaser for vis25" class="w-full h-48 object-contain bg-slate-900"
+            <img src="img/teaser/vis25.jpg" alt="Teaser for vis25" class="w-full h-48 object-contain bg-slate-900"
+              loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=VIS+2025';">
             <div class="p-6 flex flex-col flex-grow">
               <div class="flex items-center mb-2"><span class="award-badge">Honorable Mention</span></div>
@@ -279,7 +280,8 @@
 
           <!-- Publication Item -->
           <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/evis25.png" alt="Teaser for evis25" class="w-full h-48 object-contain bg-slate-900"
+            <img src="img/teaser/evis25.jpg" alt="Teaser for evis25" class="w-full h-48 object-contain bg-slate-900"
+              loading="lazy"
               onerror="this.onerror=null;this.src='https://onlinelibrary.wiley.com/doi/full/10.1111/cgf.70128'">
             <div class="p-6 flex flex-col flex-grow">
               <h3 class="text-xl font-bold text-sky-300 card-title">Enhancing Material Boundary Visualizations in 2D
@@ -297,7 +299,8 @@
 
           <!-- Publication Item -->
           <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/eg25.png" alt="Teaser for eg25" class="w-full h-48 object-contain bg-slate-900"
+            <img src="img/teaser/eg25.jpg" alt="Teaser for eg25" class="w-full h-48 object-contain bg-slate-900"
+              loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=EG+2025';">
             <div class="p-6 flex flex-col flex-grow">
               <h3 class="text-xl font-bold text-sky-300 card-title">Vortex Transformer: End-to-End Objective Vortex
@@ -314,7 +317,8 @@
 
           <!-- Publication Item -->
           <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/3dv_24.png" alt="Teaser for 3dv_24" class="w-full h-48 object-contain bg-slate-900"
+            <img src="img/teaser/3dv_24.jpg" alt="Teaser for 3dv_24" class="w-full h-48 object-contain bg-slate-900"
+              loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=3DV+2024';">
             <div class="p-6 flex flex-col flex-grow">
               <h3 class="text-xl font-bold text-sky-300 card-title">Improving Standard Transformer Models for 3D Point
@@ -331,7 +335,8 @@
 
           <!-- Publication Item -->
           <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/vis23.png" alt="Teaser for vis23" class="w-full h-48 object-contain bg-slate-900"
+            <img src="img/teaser/vis23.jpg" alt="Teaser for vis23" class="w-full h-48 object-contain bg-slate-900"
+              loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=VIS+2023';">
             <div class="p-6 flex flex-col flex-grow">
               <div class="flex items-center mb-2"><span class="award-badge">Best Paper</span></div>
@@ -353,7 +358,8 @@
 
           <!-- Publication Item -->
           <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/vis21.png" alt="Teaser for vis21" class="w-full h-48 object-contain bg-slate-900"
+            <img src="img/teaser/vis21.jpg" alt="Teaser for vis21" class="w-full h-48 object-contain bg-slate-900"
+              loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=VIS+2021';">
             <div class="p-6 flex flex-col flex-grow">
               <div class="flex items-center mb-2"><span class="award-badge">Honorable Mention</span></div>
@@ -373,7 +379,7 @@
 
           <!-- Publication Item -->
           <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/ms_thesis.png" alt="Teaser for MS Thesis"
+            <img src="img/teaser/ms_thesis.jpg" alt="Teaser for MS Thesis"
               class="w-full h-48 object-contain bg-slate-900"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=MS+Thesis';">
             <div class="p-6 flex flex-col flex-grow">
@@ -392,7 +398,8 @@
 
           <!-- Publication Item -->
           <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/cvpr2019.png" alt="Teaser for cvpr2019" class="w-full h-48 object-contain bg-slate-900"
+            <img src="img/teaser/cvpr2019.jpg" alt="Teaser for cvpr2019" class="w-full h-48 object-contain bg-slate-900"
+              loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=CVPR+2019';">
             <div class="p-6 flex flex-col flex-grow">
               <h3 class="text-xl font-bold text-sky-300 card-title">DeepLiDAR: Deep Surface Normal Guided Depth
@@ -410,8 +417,8 @@
 
           <!-- Publication Item -->
           <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/vcip_2018.png" alt="Teaser for vcip_2018"
-              class="w-full h-48 object-contain bg-slate-900"
+            <img src="img/teaser/vcip_2018.jpg" alt="Teaser for vcip_2018"
+              class="w-full h-48 object-contain bg-slate-900" loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=VCIP+2018';">
             <div class="p-6 flex flex-col flex-grow">
               <h3 class="text-xl font-bold text-sky-300 card-title">Multi-exposure Fusion with JPEG Compression Guidance
