--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       border: 1px solid #334155;
       transition: all 0.3s ease;
       backdrop-filter: blur(5px);
+      position: relative;
+      overflow: visible;
     }
 
     .card:hover {
@@ -56,13 +58,50 @@
     }
 
     .award-badge {
-      background-color: #38bdf8;
-      color: #020617;
-      font-size: 0.75rem;
+      background: linear-gradient(135deg, #5dd8d2 0%, #4fd1c7 100%);
+      color: #ffffff;
+      font-size: 0.875rem;
       font-weight: bold;
-      padding: 0.25rem 0.75rem;
-      border-radius: 9999px;
+      padding: 0.5rem 1rem 0.75rem 1rem;
       text-transform: uppercase;
+      position: absolute;
+      top: -12px;
+      left: 20px;
+      z-index: 10;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+      transform: rotate(-3deg);
+      border-radius: 6px 6px 12px 6px;
+      clip-path: polygon(0 0, 100% 0, 100% 80%, 80% 100%, 0 100%);
+      letter-spacing: 0.05em;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(4px);
+    }
+
+    .award-badge::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(45deg, transparent 30%, rgba(255, 255, 255, 0.1) 50%, transparent 70%);
+      border-radius: inherit;
+      pointer-events: none;
+    }
+
+    .award-badge::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 0;
+      height: 0;
+      border-left: 8px solid transparent;
+      border-right: 8px solid #4fd1c7;
+      border-bottom: 8px solid transparent;
+      transform: rotate(45deg);
+      margin-bottom: -4px;
+      margin-right: -4px;
     }
 
     #bg-canvas {
@@ -110,7 +149,7 @@
       align-items: center;
       background-color: #1e293b;
       color: #94a3b8;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 0.5rem;
       border-radius: 0.5rem;
       font-weight: 500;
       transition: all 0.2s ease;
@@ -183,12 +222,15 @@
             </p>
             <div class="mt-8 flex justify-center md:justify-start space-x-4">
               <a href="https://scholar.google.com/citations?user=3cPRT_YAAAAJ&hl=zh-CN" target="_blank"
-                class="inline-flex items-center bg-sky-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-sky-600 transition-colors">
-                <i data-lucide="graduation-cap" class="mr-2 h-5 w-5"></i> Google Scholar
+                class="inline-flex items-center bg-sky-500 text-white px-3 py-3 rounded-lg font-semibold hover:bg-sky-600 transition-colors">
+                <img src="img/googlescholar.svg" alt="Google Scholar" class="mr-1 h-5 w-5"> Google Scholar
               </a>
               <a href="https://github.com/Cindy-xdZhang" target="_blank"
-                class="inline-flex items-center bg-slate-700 text-white px-6 py-3 rounded-lg font-semibold hover:bg-slate-600 transition-colors">
-                <i data-lucide="github" class="mr-2 h-5 w-5"></i> GitHub
+                class="inline-flex items-center bg-slate-700 text-white px-3 py-3 rounded-lg font-semibold hover:bg-slate-600 transition-colors">
+                <svg class="mr-1 h-5 w-5" viewBox="0 0 24 24" fill="currentColor">
+                  <path
+                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                </svg> GitHub
               </a>
             </div>
           </div>
@@ -258,12 +300,12 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 
           <!-- Publication Item -->
-          <div class="card rounded-lg overflow-hidden flex flex-col">
+          <div class="card rounded-lg flex flex-col">
             <img src="img/teaser/vis25.jpg" alt="Teaser for vis25" class="w-full h-48 object-contain bg-slate-900"
               loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=VIS+2025';">
             <div class="p-6 flex flex-col flex-grow">
-              <div class="flex items-center mb-2"><span class="award-badge">Honorable Mention</span></div>
+              <span class="award-badge">Honorable Mention Best Paper</span>
               <h3 class="text-xl font-bold text-sky-300 card-title">Exploring 3D Unsteady Flow using 6D Observer Space
                 Interactions</h3>
               <p class="text-sm text-slate-400 mt-2"><strong>Xingdi Zhang</strong>, Amani Ageeli, Thomas Theußl, Markus
@@ -279,7 +321,7 @@
           </div>
 
           <!-- Publication Item -->
-          <div class="card rounded-lg overflow-hidden flex flex-col">
+          <div class="card rounded-lg flex flex-col">
             <img src="img/teaser/evis25.jpg" alt="Teaser for evis25" class="w-full h-48 object-contain bg-slate-900"
               loading="lazy"
               onerror="this.onerror=null;this.src='https://onlinelibrary.wiley.com/doi/full/10.1111/cgf.70128'">
@@ -298,7 +340,7 @@
           </div>
 
           <!-- Publication Item -->
-          <div class="card rounded-lg overflow-hidden flex flex-col">
+          <div class="card rounded-lg flex flex-col">
             <img src="img/teaser/eg25.jpg" alt="Teaser for eg25" class="w-full h-48 object-contain bg-slate-900"
               loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=EG+2025';">
@@ -316,7 +358,7 @@
           </div>
 
           <!-- Publication Item -->
-          <div class="card rounded-lg overflow-hidden flex flex-col">
+          <div class="card rounded-lg flex flex-col">
             <img src="img/teaser/3dv_24.jpg" alt="Teaser for 3dv_24" class="w-full h-48 object-contain bg-slate-900"
               loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=3DV+2024';">
@@ -334,12 +376,12 @@
           </div>
 
           <!-- Publication Item -->
-          <div class="card rounded-lg overflow-hidden flex flex-col">
+          <div class="card rounded-lg flex flex-col">
             <img src="img/teaser/vis23.jpg" alt="Teaser for vis23" class="w-full h-48 object-contain bg-slate-900"
               loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=VIS+2023';">
             <div class="p-6 flex flex-col flex-grow">
-              <div class="flex items-center mb-2"><span class="award-badge">Best Paper</span></div>
+              <span class="award-badge">Best Paper</span>
               <h3 class="text-xl font-bold text-sky-300 card-title">Vortex Lens: Interactive Vortex Core Line Extraction
                 using Observed Line Integral Convolution</h3>
               <p class="text-sm text-slate-400 mt-2">Peter Rautek, <strong>Xingdi Zhang</strong>, Bernhard Woschizka,
@@ -357,28 +399,7 @@
           </div>
 
           <!-- Publication Item -->
-          <div class="card rounded-lg overflow-hidden flex flex-col">
-            <img src="img/teaser/vis21.jpg" alt="Teaser for vis21" class="w-full h-48 object-contain bg-slate-900"
-              loading="lazy"
-              onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=VIS+2021';">
-            <div class="p-6 flex flex-col flex-grow">
-              <div class="flex items-center mb-2"><span class="award-badge">Honorable Mention</span></div>
-              <h3 class="text-xl font-bold text-sky-300 card-title">Interactive Exploration of Physically-Observable
-                Objective Vortices in Unsteady 2D Flow</h3>
-              <p class="text-sm text-slate-400 mt-2"><strong>Xingdi Zhang</strong>, Markus Hadwiger, Thomas Theußl,
-                Peter Rautek</p>
-              <p class="text-sm text-slate-500 mt-1"><em>IEEE Transactions on Visualization and Computer Graphics
-                  (Proceedings IEEE VIS 2021)</em></p>
-              <div class="mt-4 space-x-2 flex-wrap gap-y-2">
-                <a href="http://vccvisualization.org/research/killinginteraction/" target="_blank"
-                  class="link-button">Project Page</a>
-                <a href="https://vimeo.com/584574144" target="_blank" class="link-button">Video</a>
-              </div>
-            </div>
-          </div>
-
-          <!-- Publication Item -->
-          <div class="card rounded-lg overflow-hidden flex flex-col">
+          <div class="card rounded-lg flex flex-col">
             <img src="img/teaser/ms_thesis.jpg" alt="Teaser for MS Thesis"
               class="w-full h-48 object-contain bg-slate-900"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=MS+Thesis';">
@@ -395,9 +416,32 @@
               </div>
             </div>
           </div>
+          <!-- Publication Item -->
+          <div class="card rounded-lg flex flex-col">
+            <img src="img/teaser/vis21.jpg" alt="Teaser for vis21" class="w-full h-48 object-contain bg-slate-900"
+              loading="lazy"
+              onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=VIS+2021';">
+            <div class="p-6 flex flex-col flex-grow">
+              <span class="award-badge">Honorable Mention Best Paper</span>
+              <h3 class="text-xl font-bold text-sky-300 card-title">Interactive Exploration of Physically-Observable
+                Objective Vortices in Unsteady 2D Flow</h3>
+              <p class="text-sm text-slate-400 mt-2"><strong>Xingdi Zhang</strong>, Markus Hadwiger, Thomas Theußl,
+                Peter Rautek</p>
+              <p class="text-sm text-slate-500 mt-1"><em>IEEE Transactions on Visualization and Computer Graphics
+                  (Proceedings IEEE VIS 2021)</em></p>
+              <div class="mt-4 space-x-2 flex-wrap gap-y-2">
+                <a href="http://vccvisualization.org/research/killinginteraction/" target="_blank"
+                  class="link-button">Project Page</a>
+                <a href="https://vccvisualization.org/publications/2021_zhang_killinginteraction.pdf" target="_blank"
+                  class="link-button">Paper</a>
+                <a href="https://vimeo.com/584574144" target="_blank" class="link-button">Video</a>
+              </div>
+            </div>
+          </div>
+
 
           <!-- Publication Item -->
-          <div class="card rounded-lg overflow-hidden flex flex-col">
+          <div class="card rounded-lg flex flex-col">
             <img src="img/teaser/cvpr2019.jpg" alt="Teaser for cvpr2019" class="w-full h-48 object-contain bg-slate-900"
               loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=CVPR+2019';">
@@ -416,7 +460,7 @@
           </div>
 
           <!-- Publication Item -->
-          <div class="card rounded-lg overflow-hidden flex flex-col">
+          <div class="card rounded-lg flex flex-col">
             <img src="img/teaser/vcip_2018.jpg" alt="Teaser for vcip_2018"
               class="w-full h-48 object-contain bg-slate-900" loading="lazy"
               onerror="this.onerror=null;this.src='https://placehold.co/600x300/1e293b/38bdf8?text=VCIP+2018';">
@@ -447,7 +491,10 @@
               Prediction for Outdoor Secene from Sparce Lidar Data and Single Color Image.</p>
             <div class="mt-4">
               <a href="https://github.com/Cindy-xdZhang/surface-normal" target="_blank" class="link-button">
-                <i data-lucide="github" class="mr-2 h-4 w-4"></i> GitHub
+                <svg class="mr-1 h-4 w-4" viewBox="0 0 24 24" fill="currentColor">
+                  <path
+                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                </svg> GitHub
               </a>
             </div>
           </div>
@@ -457,7 +504,10 @@
               visualization.</p>
             <div class="mt-4">
               <a href="https://github.com/Cindy-xdZhang/PyflowVis" target="_blank" class="link-button">
-                <i data-lucide="github" class="mr-2 h-4 w-4"></i> GitHub
+                <svg class="mr-1 h-4 w-4" viewBox="0 0 24 24" fill="currentColor">
+                  <path
+                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                </svg> GitHub
               </a>
             </div>
           </div>
@@ -466,7 +516,10 @@
             <p class="text-slate-400 mt-2">A C++ implemented software graphics pipeline and ray-tracing system.</p>
             <div class="mt-4">
               <a href="https://github.com/Cindy-xdZhang/Software-Renderer" target="_blank" class="link-button">
-                <i data-lucide="github" class="mr-2 h-4 w-4"></i> GitHub
+                <svg class="mr-1 h-4 w-4" viewBox="0 0 24 24" fill="currentColor">
+                  <path
+                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                </svg> GitHub
               </a>
             </div>
           </div>
@@ -475,7 +528,23 @@
             <p class="text-slate-400 mt-2">C++ implementation of discrete differential geometry algorithms.</p>
             <div class="mt-4">
               <a href="https://github.com/Cindy-xdZhang/cs272" target="_blank" class="link-button">
-                <i data-lucide="github" class="mr-2 h-4 w-4"></i> GitHub
+                <svg class="mr-1 h-4 w-4" viewBox="0 0 24 24" fill="currentColor">
+                  <path
+                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                </svg> GitHub
+              </a>
+            </div>
+          </div>
+
+          <div class="card rounded-lg p-6">
+            <span class="award-badge">Patent</span>
+            <h3 class="text-xl font-bold text-sky-300 card-title">A Method for Synthesizing High Dynamic Range Images
+            </h3>
+            <p class="text-slate-400 mt-2">Chinese Patent CN108717690B - A method for synthesizing high dynamic range
+              images using JPEG compression intermediate products as guidance for synthesis coding information.</p>
+            <div class="mt-4">
+              <a href="https://patents.google.com/patent/CN108717690B/en" target="_blank" class="link-button">
+                <img src="img/googlescholar.svg" alt="Google Scholar" class="mr-1 h-4 w-4"> Patent Link
               </a>
             </div>
           </div>
@@ -487,16 +556,16 @@
         <h2 class="text-4xl font-bold mb-8 section-title">Service</h2>
         <div class="max-w-4xl space-y-4">
           <div class="p-4 border border-slate-700 rounded-lg bg-slate-800/50 flex justify-between items-center">
-            <p><span class="font-bold text-sky-400">Volunteer:</span> Vcc Open week (VR experience for flow
-              visualization).</p>
+            <p><span class="font-bold text-sky-400">Volunteer Engineer:</span> Vcc Open week (VR experience for flow
+              visualization)</p>
             <span class="text-slate-400 text-sm flex-shrink-0 ml-4">2021</span>
           </div>
           <div class="p-4 border border-slate-700 rounded-lg bg-slate-800/50 flex justify-between items-center">
-            <p><span class="font-bold text-sky-400">Reviewer:</span> Computers & Graphics Journal.</p>
+            <p><span class="font-bold text-sky-400">Journal Reviewer:</span> Computers & Graphics</p>
             <span class="text-slate-400 text-sm flex-shrink-0 ml-4">2022</span>
           </div>
           <div class="p-4 border border-slate-700 rounded-lg bg-slate-800/50 flex justify-between items-center">
-            <p><span class="font-bold text-sky-400">Reviewer:</span> VIS.</p>
+            <p><span class="font-bold text-sky-400">Conference Reviewer:</span>IEEE VIS</p>
             <span class="text-slate-400 text-sm flex-shrink-0 ml-4">2025</span>
           </div>
           <div class="p-4 border border-slate-700 rounded-lg bg-slate-800/50 flex justify-between items-center">
@@ -505,7 +574,7 @@
             <span class="text-slate-400 text-sm flex-shrink-0 ml-4">2023</span>
           </div>
           <div class="p-4 border border-slate-700 rounded-lg bg-slate-800/50 flex justify-between items-center">
-            <p><span class="font-bold text-sky-400">TA:</span> GPGPU.</p>
+            <p><span class="font-bold text-sky-400">TA:</span>CS 380 - GPU and GPGPU Programming</p>
             <span class="text-slate-400 text-sm flex-shrink-0 ml-4">2025</span>
           </div>
         </div>
