--- a/index.html
+++ b/index.html
@@ -235,8 +235,11 @@
             </div>
           </div>
           <div class="md:w-1/3 flex justify-center">
-            <div
-              class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-slate-700 shadow-lg bg-slate-800">
+            <div class="w-[300px] h-[450px] md:w-[380px] md:h-[480px]
+                        rounded-[28px] md:rounded-[36px]
+                        overflow-hidden border-4 border-slate-700 
+                        shadow-lg bg-slate-800
+                        flex items-center justify-center">
               <img src="img/me.jpg" alt="Xingdi Zhang" class="w-full h-full object-cover">
             </div>
           </div>
