--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     }
 
     .award-badge {
-      background: linear-gradient(135deg, #5dd8d2 0%, #4fd1c7 100%);
+      background: linear-gradient(135deg, #d40c27 0%, #d40c27 100%);
       color: #ffffff;
       font-size: 0.875rem;
       font-weight: bold;
@@ -175,7 +175,6 @@
       <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
         <a href="#" class="text-2xl font-bold tracking-wider">Xingdi Zhang</a>
         <div class="hidden md:flex space-x-8">
-          <a href="#about" class="nav-link">About</a>
           <a href="#news" class="nav-link">News</a>
           <a href="#publications" class="nav-link">Publications</a>
           <a href="#projects" class="nav-link">Projects</a>
@@ -191,8 +190,6 @@
       <!-- Mobile Menu -->
       <div id="mobile-menu" class="md:hidden hidden">
         <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-          <a href="#about"
-            class="block px-3 py-2 rounded-md text-base font-medium text-slate-300 hover:text-white hover:bg-slate-700">About</a>
           <a href="#news"
             class="block px-3 py-2 rounded-md text-base font-medium text-slate-300 hover:text-white hover:bg-slate-700">News</a>
           <a href="#publications"
@@ -213,9 +210,37 @@
         <div class="flex flex-col-reverse md:flex-row items-center w-full gap-8">
           <div class="md:w-2/3 text-center md:text-left">
             <h1 class="text-5xl md:text-7xl font-bold leading-tight">Xingdi Zhang (张星迪)</h1>
-            <p class="mt-4 text-xl text-slate-400">
-              Ph.D. Student at KAUST | Explorer in Scientific Visualization, Computer Graphics, and AI.
-            </p>
+
+
+            <!-- About Section -->
+            <section id="about" class="py-20">
+              <h2 class="text-4xl font-bold mb-8 section-title">About Me</h2>
+              <div class="text-lg text-slate-300 space-y-4 max-w-4xl">
+                <p>
+                  I am a <strong>Postdoctoral Researcher</strong> at <a href="https://www.kaust.edu.sa" target="_blank"
+                    class="text-sky-400 hover:underline">King Abdullah University of Science and Technology (KAUST)</a>
+                  and a
+                  member of the <a href="http://vccvisualization.org/" target="_blank"
+                    class="text-sky-400 hover:underline">High-Performance Visualization Group</a>, working with Prof. <a
+                    href="https://www.hadwiger.at/" target="_blank" class="text-sky-400 hover:underline">Markus
+                    Hadwiger</a>.
+                </p>
+                <p>
+                  I completed my Ph.D. in Computer Science at KAUST in 2025. My Ph.D. thesis focuses on
+                  <strong>observer-relative flow visualization</strong>, with a particular emphasis on
+                  <strong>real-time user interaction and high-performance rendering</strong>.
+                <p>
+
+                </p>
+                <p>
+                  My primary interests: <strong>Real-Time Flow
+                    Visualization, High-Performance C++/CUDA (GPU) Computing, Differential Geometry and
+                    AI-driven Visual Computing</strong>.
+                </p>
+              </div>
+            </section>
+
+
             <p class="mt-2 text-slate-400">
               Email: <a href="mailto:cindyzhang.yono531@gmail.com"
                 class="text-sky-400 hover:underline">cindyzhang.yono531@gmail.com</a>
@@ -246,34 +271,16 @@
         </div>
       </section>
 
-      <!-- About Section -->
-      <section id="about" class="py-20">
-        <h2 class="text-4xl font-bold mb-8 section-title">About Me</h2>
-        <div class="text-lg text-slate-300 space-y-4 max-w-4xl">
-          <p>
-            I am a Ph.D. student in Computer Science at <a href="https://www.kaust.edu.sa" target="_blank"
-              class="text-sky-400 hover:underline">King Abdullah University of Science and Technology (KAUST)</a>, where
-            I am a member of the <a href="http://vccvisualization.org/" target="_blank"
-              class="text-sky-400 hover:underline">High-Performance Visualization Group</a> advised by Prof. <a
-              href="https://www.hadwiger.at/" target="_blank" class="text-sky-400 hover:underline">Markus Hadwiger</a>.
-            I received my B.E. in Computer Science from the Honor College of <a href="https://www.uestc.edu.cn/"
-              target="_blank" class="text-sky-400 hover:underline">University of Electronic Science and Technology of
-              China (UESTC)</a>
-            in 2020.
-          </p>
-          <p>
-            My primary research interests lie in <strong>Scientific Visualization</strong> and <strong>Computer
-              Graphics</strong>. I am also passionate about related fields, including <strong>AI-driven Visual
-              Computing, High Dynamic Range (HDR) Imaging, Deep Learning for LiDAR data, Point Cloud Learning,</strong>
-            and <strong>Physics-Informed Neural Networks (PINNs)</strong>.
-          </p>
-        </div>
-      </section>
+
 
       <!-- News Section -->
       <section id="news" class="py-12">
         <h2 class="text-4xl font-bold mb-8 section-title">News</h2>
         <div class="space-y-4 max-w-4xl">
+          <div class="p-4 border border-slate-700 rounded-lg bg-slate-800/50">
+            <p><span class="font-bold text-sky-400 mr-2">[Nov 2025]</span>I have successfully defended my PhD thesis and
+              will begin my postdoctoral research</strong>!</p>
+          </div>
           <div class="p-4 border border-slate-700 rounded-lg bg-slate-800/50">
             <p><span class="font-bold text-sky-400 mr-2">[Aug 2025]</span> Our paper on 6D observer space interactions
               received an <strong>Honorable Mention for Best Paper at IEEE VIS 2025</strong>!</p>
@@ -488,6 +495,27 @@
       <section id="projects" class="py-20">
         <h2 class="text-4xl font-bold mb-12 section-title">Projects</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+          <div class="card rounded-lg p-6">
+            <h3 class="text-xl font-bold text-sky-300 card-title">PyFlowVis</h3>
+            <p class="text-slate-400 mt-2"><strong>CUDA-accelerated</strong> high-performance framework
+              (hybrid C++/Python/CUDA) for real-time observer relative flow visualization.</p>
+            <ul class="list-disc pl-6 text-slate-400 mt-2 space-y-1">
+              <li>Compute: CUDA kernels for pathlines/flowmap/FTLE/Reference Freame Optimization; CPU fallback via numba
+                and C++ (PyBind).</li>
+              <li>Rendering: PyOpenGL backend for efficient real-time visualization.</li>
+            </ul>
+            <div class="mt-4">
+              <a href="https://github.com/Cindy-xdZhang/PyflowVis" target="_blank" class="link-button">
+                <svg class="mr-1 h-4 w-4" viewBox="0 0 24 24" fill="currentColor">
+                  <path
+                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                </svg> GitHub
+              </a>
+            </div>
+          </div>
+
+
           <div class="card rounded-lg p-6">
             <h3 class="text-xl font-bold text-sky-300 card-title">Surface Normal ToolKit</h3>
             <p class="text-slate-400 mt-2">Code for preprocessing Lidar data for paper Deep Surface Normal Guided Depth
@@ -501,19 +529,9 @@
               </a>
             </div>
           </div>
-          <div class="card rounded-lg p-6">
-            <h3 class="text-xl font-bold text-sky-300 card-title">PyFlowVis</h3>
-            <p class="text-slate-400 mt-2">A Python framework for integrating machine learning with interactive flow
-              visualization.</p>
-            <div class="mt-4">
-              <a href="https://github.com/Cindy-xdZhang/PyflowVis" target="_blank" class="link-button">
-                <svg class="mr-1 h-4 w-4" viewBox="0 0 24 24" fill="currentColor">
-                  <path
-                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                </svg> GitHub
-              </a>
-            </div>
-          </div>
+
+
+
           <div class="card rounded-lg p-6">
             <h3 class="text-xl font-bold text-sky-300 card-title">Software Renderer</h3>
             <p class="text-slate-400 mt-2">A C++ implemented software graphics pipeline and ray-tracing system.</p>
@@ -589,7 +607,7 @@
         <div class="max-w-4xl space-y-8">
           <div class="p-6 border border-slate-700 rounded-lg bg-slate-800/50">
             <div class="flex justify-between items-baseline">
-              <h3 class="text-xl font-bold text-sky-300">Graphics Engine Intern</h3>
+              <h3 class="text-xl font-bold text-sky-300">Graphics Engine Developer</h3>
               <p class="text-sm text-slate-400">Jun 2022 - Jun 2023</p>
             </div>
             <p class="text-md text-slate-300 mt-1">Huawei Suomi (Tampere, Finland)</p>
